# betacode-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-production.yml
betacode/: Cargo.toml  README.md
betacode-cli/: Cargo.toml
betacode/src/: converter.rs  lib.rs  validator.rs
betacode/src/converter/: tests_converter.rs
betacode/src/validator/: test.rs
cli/: Cargo.toml  README.md  iliad1.1.txt
cli/src/: main.rs
