[package]
name = "betacode"
version = "1.1.0"
edition = "2021"
authors = ["Caio Geraldes <caio.geraldes@usp.br"]
description = "A rust library for Betacode conversion"
license = "MIT"
repository = "https://github.com/caiogeraldes/betacode-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"
unicode-normalization = "0.1.21"
