[package]
name = "betaconvert"
version = "0.1.4"
edition = "2021"
authors = ["Caio Geraldes <caio.geraldes@usp.br"]
description = "A rust CLI for Betacode conversion"
license = "MIT"
repository = "https://github.com/caiogeraldes/betacode-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
betacode = { path = "../betacode", version = ">=1.1.0" }
clap = { version = "3.2.17", features = ["derive"] }
